cmake_minimum_required (VERSION 3.20)

project ("MKL.NET.Native")

set (CMAKE_SHARED_LIBRARY_PREFIX "")

if (CMAKE_BINARY_DIR MATCHES "win-x64$")
    add_library (MKL.NET.Native SHARED "test.c" "dfti.c" "blas.c")
    target_include_directories (MKL.NET.Native PRIVATE ${PROJECT_SOURCE_DIR}/../packages/devel/intelmkl.devel.win-x64/lib/native/include)
    target_link_directories (MKL.NET.Native PRIVATE ${PROJECT_SOURCE_DIR}/../packages/devel/intelmkl.devel.win-x64/lib/native/win-x64)
    target_link_libraries (MKL.NET.Native mkl_intel_lp64_dll mkl_intel_thread_dll mkl_core_dll)
elseif(CMAKE_BINARY_DIR MATCHES "win-x86$")
    add_library (MKL.NET.Native SHARED "test.c" "dfti.c" "blas.c")
    target_include_directories (MKL.NET.Native PRIVATE ${PROJECT_SOURCE_DIR}/../packages/devel/intelmkl.devel.win-x86/lib/native/include)
    target_link_directories (MKL.NET.Native PRIVATE ${PROJECT_SOURCE_DIR}/../packages/devel/intelmkl.devel.win-x86/lib/native/win-x86)
    target_link_libraries (MKL.NET.Native mkl_intel_c_dll mkl_intel_thread_dll mkl_core_dll)
elseif(CMAKE_BINARY_DIR MATCHES "linux-x64$")
    add_library (MKL.NET.Native SHARED "test.c" "dfti.c" "blas.c")
    target_include_directories (MKL.NET.Native PRIVATE ${PROJECT_SOURCE_DIR}/../packages/devel/intelmkl.devel.linux-x64/lib/native/include)
    target_link_directories (MKL.NET.Native PRIVATE ${PROJECT_SOURCE_DIR}/../packages/devel/intelmkl.devel.linux-x64/lib/native/linux-x64)
    target_link_libraries (MKL.NET.Native mkl_intel_lp64 mkl_intel_thread mkl_core)
elseif(CMAKE_BINARY_DIR MATCHES "osx-x64$")
    add_library (MKL.NET.Native SHARED "test.c" "dfti.c" "blas.c")
    target_include_directories (MKL.NET.Native PRIVATE ${PROJECT_SOURCE_DIR}/../packages/devel/intelmkl.devel.osx-x64/lib/native/include)
    target_link_directories (MKL.NET.Native PRIVATE ${PROJECT_SOURCE_DIR}/../packages/devel/intelmkl.devel.osx-x64/lib/native/osx-x64)
    target_link_libraries (MKL.NET.Native mkl_intel_lp64 mkl_intel_thread mkl_core)
endif()